# eepy-car

./: .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: test.yml
experiments/: camera_calibration.py  test_harness.py
src/eepy_car/: main.py
src/eepy_car/alert/: __init__.py  driver_state.py  threshold.py
src/eepy_car/capture/: __init__.py  video.py
src/eepy_car/config/: loader.py
src/eepy_car/distraction/: __init__.py  apriltag.py  gaze.py
src/eepy_car/drowsiness/: __init__.py  ear.py  face.py  mar.py
src/eepy_car/experiments/: april_tag.py  mesh.py
src/eepy_car/output/: __init__.py  audio.py  logger.py  overlay.py
tests/: test_alert.py  test_config.py  test_distraction.py  test_drowsiness.py
tests/assets/test_calibration_output/: calibration.json  calibration.npz
