[project]
name = "eepy-car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mediapipe>=0.10.31",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.90",
    "psutil>=7.2.2",
    "pytest>=8.4.2",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=8.4.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eepy_car"]
